// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestViewContainer for testViewType=AdhocFailure renders per snapshot with no testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={Object {}}
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocFailure",
    }
  }
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocFailure renders per snapshot with testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={Object {}}
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": Object {
        "content": "stub content page component \\"content\\"",
        "guidance": "stub content page component \\"guidance\\"",
      },
      "testViewType": "AdhocFailure",
    }
  }
  content="stub content page component \\"content\\""
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  guidance="stub content page component \\"guidance\\""
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocNeedsReview renders per snapshot with no testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={Object {}}
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocNeedsReview",
    }
  }
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocNeedsReview renders per snapshot with testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={Object {}}
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": Object {
        "content": "stub content page component \\"content\\"",
        "guidance": "stub content page component \\"guidance\\"",
      },
      "testViewType": "AdhocNeedsReview",
    }
  }
  content="stub content page component \\"content\\""
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  guidance="stub content page component \\"guidance\\""
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocStatic renders per snapshot with no testViewOverrides 1`] = `
<AdhocStaticTestView
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocStatic",
    }
  }
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocStatic renders per snapshot with testViewOverrides 1`] = `
<AdhocStaticTestView
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": Object {
        "content": "stub content page component \\"content\\"",
        "guidance": "stub content page component \\"guidance\\"",
      },
      "testViewType": "AdhocStatic",
    }
  }
  content="stub content page component \\"content\\""
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  guidance="stub content page component \\"guidance\\""
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocTabStops renders per snapshot with no testViewOverrides 1`] = `
<AdhocTabStopsTestView
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocTabStops",
    }
  }
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocTabStops renders per snapshot with testViewOverrides 1`] = `
<AdhocTabStopsTestView
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": Object {
        "content": "stub content page component \\"content\\"",
        "guidance": "stub content page component \\"guidance\\"",
      },
      "testViewType": "AdhocTabStops",
    }
  }
  content="stub content page component \\"content\\""
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  guidance="stub content page component \\"guidance\\""
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=Assessment renders per snapshot with no testViewOverrides 1`] = `
<AssessmentTestView
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "Assessment",
    }
  }
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=Assessment renders per snapshot with testViewOverrides 1`] = `
<AssessmentTestView
  configuration={
    Object {
      "key": "configStub",
      "testViewOverrides": Object {
        "content": "stub content page component \\"content\\"",
        "guidance": "stub content page component \\"guidance\\"",
      },
      "testViewType": "Assessment",
    }
  }
  content="stub content page component \\"content\\""
  deps={
    Object {
      "automatedChecksCardSelectionMessageCreator": Object {},
      "needsReviewCardSelectionMessageCreator": Object {},
    }
  }
  guidance="stub content page component \\"guidance\\""
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    Object {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    Object {
      "tabStops": Object {
        "requirements": Object {},
      },
    }
  }
/>
`;
